Modal: resolve issue with overflow content

--- a/src/ui/Modal/style.scss
+++ b/src/ui/Modal/style.scss
@@ -42,6 +42,8 @@
   display: flex;
   text-align: left;
   flex-grow: 1;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   &__menu {
     border-radius: $border-radius;
